[ICL] Trine 4 trace causing GPU HANG
In the following discussion from !17778 (merged), I found that ICL hangs on a Trine 4 trace (run with wine and DXVK):
-
@Samsuper started a discussion: (+3 comments)
I did a bisect and the first bad commit was: f7262462 ("intel/fs: Rework fence handling in brw_fs_nir.cpp").
TGL is unaffected.
/cc @jekstrand @cmarcelo